<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2019 The Monyhar Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <!-- Third party terms and conditions. -->
    <org.monyhar.chrome.browser.autofill_assistant.user_data.AssistantChoiceList
        android:id="@+id/third_party_terms_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/autofill_assistant_bottombar_horizontal_spacing"
        android:layout_marginEnd="@dimen/autofill_assistant_bottombar_horizontal_spacing"
        app:column_spacing="8dp"
        app:layout_has_edit_button="false">
        <!-- Choices are created in code. -->
    </org.monyhar.chrome.browser.autofill_assistant.user_data.AssistantChoiceList>

    <!-- Privacy notice. -->
    <TextView
        android:id="@+id/collect_data_privacy_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/autofill_assistant_bottombar_horizontal_spacing"
        android:layout_marginEnd="@dimen/autofill_assistant_bottombar_horizontal_spacing"
        android:background="@drawable/autofill_assistant_lightblue_rect_bg"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.TextSmall.Secondary"/>
</LinearLayout>
