...
                  android:hint="@string/autofill_expiration_date_year_hint" />
            </LinearLayout>

            <!-- TODO(crbug.com/900912): Fix and remove lint ignore -->
            <EditText
                tools:ignore="Autofill"
                android:id="@+id/card_unmask_input"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:minHeight="48dp"
                android:ems="5"
...
