// Copyright 2019 The Monyhar Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

package org.monyhar.chrome.browser.autofill_assistant;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.contrib.PickerActions.setDate;
import static androidx.test.espresso.matcher.RootMatchers.isDialog;
import static androidx.test.espresso.matcher.ViewMatchers.hasSibling;
import static androidx.test.espresso.matcher.ViewMatchers.isCompletelyDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isEnabled;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withTagValue;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

import static org.hamcrest.MatcherAssert.assertThat;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.containsString;
import static org.hamcrest.Matchers.equalTo;
import static org.hamcrest.Matchers.instanceOf;
import static org.hamcrest.Matchers.is;
import static org.hamcrest.Matchers.iterableWithSize;
import static org.hamcrest.Matchers.not;

import static org.monyhar.chrome.browser.autofill_assistant.AutofillAssistantUiTestUtil.getElementValue;
import static org.monyhar.chrome.browser.autofill_assistant.AutofillAssistantUiTestUtil.startAutofillAssistant;
import static org.monyhar.chrome.browser.autofill_assistant.AutofillAssistantUiTestUtil.tapElement;
import static org.monyhar.chrome.browser.autofill_assistant.AutofillAssistantUiTestUtil.waitUntilKeyboardMatchesCondition;
import static org.monyhar.chrome.browser.autofill_assistant.AutofillAssistantUiTestUtil.waitUntilViewMatchesCondition;

import android.support.test.InstrumentationRegistry;
import android.widget.DatePicker;

import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.filters.MediumTest;

import org.hamcrest.CoreMatchers;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import org.monyhar.base.LocaleUtils;
import org.monyhar.base.test.util.CommandLineFlags;
import org.monyhar.chrome.autofill_assistant.R;
import org.monyhar.chrome.browser.autofill.PersonalDataManager;
import org.monyhar.chrome.browser.autofill_assistant.carousel.ButtonView;
import org.monyhar.chrome.browser.autofill_assistant.proto.ActionProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.ChipIcon;
import org.monyhar.chrome.browser.autofill_assistant.proto.ChipProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.ChipType;
import org.monyhar.chrome.browser.autofill_assistant.proto.ClickType;
import org.monyhar.chrome.browser.autofill_assistant.proto.CollectUserDataProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.CollectUserDataProto.TermsAndConditionsState;
import org.monyhar.chrome.browser.autofill_assistant.proto.CollectUserDataResultProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.ContactDetailsProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.DateProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.DateTimeRangeProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.DropdownSelectStrategy;
import org.monyhar.chrome.browser.autofill_assistant.proto.ElementAreaProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.ElementAreaProto.Rectangle;
import org.monyhar.chrome.browser.autofill_assistant.proto.ElementConditionProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.IntList;
import org.monyhar.chrome.browser.autofill_assistant.proto.KeyboardValueFillStrategy;
import org.monyhar.chrome.browser.autofill_assistant.proto.ModelProto.ModelValue;
import org.monyhar.chrome.browser.autofill_assistant.proto.PopupListSectionProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.ProcessedActionProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.ProcessedActionStatusProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.PromptProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.PromptProto.Choice;
import org.monyhar.chrome.browser.autofill_assistant.proto.RequiredFieldProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.SelectorProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.ShowCastProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.ShowDetailsProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.SupportedScriptProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.SupportedScriptProto.PresentationProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.TextInputProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.TextInputProto.InputType;
import org.monyhar.chrome.browser.autofill_assistant.proto.TextInputSectionProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.UseCreditCardProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.UserFormSectionProto;
import org.monyhar.chrome.browser.autofill_assistant.proto.ValueExpression;
import org.monyhar.chrome.browser.autofill_assistant.proto.ValueExpression.Chunk;
import org.monyhar.chrome.browser.autofill_assistant.proto.ValueProto;
import org.monyhar.chrome.browser.customtabs.CustomTabActivityTestRule;
import org.monyhar.chrome.browser.customtabs.CustomTabsTestUtils;
import org.monyhar.chrome.browser.flags.ChromeSwitches;
import org.monyhar.chrome.test.ChromeJUnit4ClassRunner;
import org.monyhar.content_public.browser.WebContents;

import java.text.DateFormat;
import java.text.SimpleDateFormat;
import java.util.ArrayList;
import java.util.Calendar;
import java.util.Collections;
import java.util.List;
import java.util.Locale;

/**
 * Integration tests for the collect user data action.
 */
@CommandLineFlags.Add({ChromeSwitches.DISABLE_FIRST_RUN_EXPERIENCE})
@RunWith(ChromeJUnit4ClassRunner.class)
public class AutofillAssistantCollectUserDataIntegrationTest {
    @Rule
    public CustomTabActivityTestRule mTestRule = new CustomTabActivityTestRule();

    private static final String TEST_PAGE = "/components/test/data/autofill_assistant/html/"
            + "form_target_website.html";

    private AutofillAssistantCollectUserDataTestHelper mHelper;

    private WebContents getWebContents() {
        return mTestRule.getWebContents();
    }

    @Before
    public void setUp() throws Exception {
        AutofillAssistantPreferencesUtil.setInitialPreferences(true);
        mTestRule.startCustomTabActivityWithIntent(CustomTabsTestUtils.createMinimalCustomTabIntent(
                InstrumentationRegistry.getTargetContext(),
                mTestRule.getTestServer().getURL(TEST_PAGE)));
        mHelper = new AutofillAssistantCollectUserDataTestHelper();
    }

    /**
     * Fill a form with a saved credit card's details and type the CVC when prompted.
     */
    @Test
    @MediumTest
    public void testEnterPayment() throws Exception {
        String profileId = mHelper.addDummyProfile("John Doe", "johndoe@gmail.com");
        mHelper.addDummyCreditCard(profileId);

        ArrayList<ActionProto> list = new ArrayList<>();
        list.add(
                (ActionProto) ActionProto.newBuilder()
                        .setCollectUserData(CollectUserDataProto.newBuilder()
                                                    .setRequestPaymentMethod(true)
                                                    .setBillingAddressName("billing_address")
                                                    .addSupportedBasicCardNetworks("visa")
                                                    .setPrivacyNoticeText("3rd party privacy text")
                                                    .setShowTermsAsCheckbox(true)
                                                    .setRequestTermsAndConditions(true)
                                                    .setAcceptTermsAndConditionsText("accept terms")
                                                    .setTermsAndConditionsState(
                                                            TermsAndConditionsState.ACCEPTED))
                        .build());

        RequiredFieldProto fallbackTextField =
                RequiredFieldProto.newBuilder()
                        .setForced(true) // Make sure we do actual work.
                        .setValueExpression(ValueExpression.newBuilder().addChunk(
                                Chunk.newBuilder().setKey(57)))
                        .setElement(SelectorProto.newBuilder().addFilters(
                                SelectorProto.Filter.newBuilder().setCssSelector(
                                        "#fallback_entry")))
                        .setFillStrategy(KeyboardValueFillStrategy.SIMULATE_KEY_PRESSES)
                        .build();
        RequiredFieldProto fallbackDropdownField =
                RequiredFieldProto.newBuilder()
                        .setForced(true) // Make sure we do actual work.
                        .setValueExpression(ValueExpression.newBuilder().addChunk(
                                Chunk.newBuilder().setKey(-2)))
                        .setElement(SelectorProto.newBuilder().addFilters(
                                SelectorProto.Filter.newBuilder().setCssSelector(
                                        "#fallback_dropdown")))
                        .setSelectStrategy(DropdownSelectStrategy.VALUE_MATCH)
                        .build();
        RequiredFieldProto fallbackJsDropdownField =
                RequiredFieldProto.newBuilder()
                        .setValueExpression(ValueExpression.newBuilder().addChunk(
                                Chunk.newBuilder().setKey(55)))
                        .setElement(SelectorProto.newBuilder().addFilters(
                                SelectorProto.Filter.newBuilder().setCssSelector(
                                        "#js_dropdown_value")))
                        .setOptionElementToClick(
                                SelectorProto.newBuilder()
                                        .addFilters(
                                                SelectorProto.Filter.newBuilder().setCssSelector(
                                                        "#js_dropdown_options li"))
                                        .addFilters(
                                                SelectorProto.Filter.newBuilder().setBoundingBox(
                                                        SelectorProto.BoundingBoxFilter
                                                                .getDefaultInstance())))
                        .setClickType(ClickType.TAP)
                        .build();
        list.add((ActionProto) ActionProto.newBuilder()
                         .setUseCard(
                                 UseCreditCardProto.newBuilder()
                                         .setFormFieldElement(SelectorProto.newBuilder().addFilters(
                                                 SelectorProto.Filter.newBuilder().setCssSelector(
                                                         "#card_number")))
                                         .addRequiredFields(fallbackTextField)
                                         .addRequiredFields(fallbackDropdownField)
                                         .addRequiredFields(fallbackJsDropdownField))
                         .build());
        list.add((ActionProto) ActionProto.newBuilder()
                         .setPrompt(PromptProto.newBuilder().setMessage("Prompt").addChoices(
                                 PromptProto.Choice.newBuilder()))
                         .build());
        AutofillAssistantTestScript script = new AutofillAssistantTestScript(
                (SupportedScriptProto) SupportedScriptProto.newBuilder()
                        .setPath("form_target_website.html")
                        .setPresentation(PresentationProto.newBuilder().setAutostart(true).setChip(
                                ChipProto.newBuilder().setText("Payment")))
                        .build(),
                list);

        AutofillAssistantTestService testService =
                new AutofillAssistantTestService(Collections.singletonList(script));
        startAutofillAssistant(mTestRule.getActivity(), testService);

        waitUntilViewMatchesCondition(withText("Continue"), isCompletelyDisplayed());
        onView(allOf(isDescendantOfA(withTagValue(
                             is(AssistantTagsForTesting
                                             .COLLECT_USER_DATA_CHECKBOX_TERMS_SECTION_TAG))),
                       withId(R.id.collect_data_privacy_notice)))
                .check(matches(isDisplayed()));

        onView(withText("Continue")).perform(click());
        waitUntilViewMatchesCondition(withId(R.id.card_unmask_input), isCompletelyDisplayed());
        onView(withId(R.id.card_unmask_input)).perform(typeText("123"), pressImeActionButton());
        waitUntilViewMatchesCondition(withText("Prompt"), isCompletelyDisplayed(), 6000L);
        assertThat(getElementValue(getWebContents(), "name"), is("John Doe"));
        assertThat(getElementValue(getWebContents(), "card_number"), is("4111111111111111"));
        assertThat(getElementValue(getWebContents(), "cv2_number"), is("123"));
        assertThat(getElementValue(getWebContents(), "exp_month"), is("12"));
        assertThat(getElementValue(getWebContents(), "exp_year"), is("2050"));
        assertThat(getElementValue(getWebContents(), "fallback_entry"), is("12/2050"));
        assertThat(getElementValue(getWebContents(), "fallback_dropdown"), is("visa"));
        assertThat(getElementValue(getWebContents(), "js_dropdown_value"), is("2050"));
    }

    @Test
    @MediumTest
    public void testFailingAutofillSendsProperError() throws Exception {
        String profileId = mHelper.addDummyProfile("John Doe", "johndoe@gmail.com");
        mHelper.addDummyCreditCard(profileId);

        ArrayList<ActionProto> list = new ArrayList<>();
        list.add(
                (ActionProto) ActionProto.newBuilder()
                        .setCollectUserData(CollectUserDataProto.newBuilder()
                                                    .setRequestPaymentMethod(true)
                                                    .setBillingAddressName("billing_address")
                                                    .addSupportedBasicCardNetworks("visa")
                                                    .setPrivacyNoticeText("3rd party privacy text")
                                                    .setShowTermsAsCheckbox(true)
                                                    .setRequestTermsAndConditions(true)
                                                    .setAcceptTermsAndConditionsText("accept terms")
                                                    .setTermsAndConditionsState(
                                                            TermsAndConditionsState.ACCEPTED))
                        .build());

        RequiredFieldProto fallbackTextField =
                RequiredFieldProto.newBuilder()
                        .setForced(true) // Make sure we fail here while trying to fill the field.
                        .setValueExpression(
                                ValueExpression.newBuilder().addChunk(Chunk.newBuilder().setKey(
                                        -99))) // Use non-existent key to force an error.
                        .setElement(SelectorProto.newBuilder().addFilters(
                                SelectorProto.Filter.newBuilder().setCssSelector(
                                        "#fallback_entry")))
                        .setFillStrategy(KeyboardValueFillStrategy.SIMULATE_KEY_PRESSES)
                        .build();
        list.add((ActionProto) ActionProto.newBuilder()
                         .setUseCard(
                                 UseCreditCardProto.newBuilder()
                                         .setFormFieldElement(SelectorProto.newBuilder().addFilters(
                                                 SelectorProto.Filter.newBuilder().setCssSelector(
                                                         "#card_number")))
                                         .addRequiredFields(fallbackTextField))
                         .build());
        AutofillAssistantTestScript script = new AutofillAssistantTestScript(
                (SupportedScriptProto) SupportedScriptProto.newBuilder()
                        .setPath("form_target_website.html")
                        .setPresentation(PresentationProto.newBuilder().setAutostart(true).setChip(
                                ChipProto.newBuilder().setText("Payment")))
                        .build(),
                list);

        AutofillAssistantTestService testService =
                new AutofillAssistantTestService(Collections.singletonList(script));
        startAutofillAssistant(mTestRule.getActivity(), testService);

        waitUntilViewMatchesCondition(withText("Continue"), isCompletelyDisplayed());
        testService.setNextActions(new ArrayList<>());
        onView(withText("Continue")).perform(click());
        waitUntilViewMatchesCondition(withId(R.id.card_unmask_input), isCompletelyDisplayed());
        onView(withId(R.id.card_unmask_input)).perform(typeText("123"), pressImeActionButton());
        testService.waitUntilGetNextActions(1);

        List<ProcessedActionProto> processedActions = testService.getProcessedActions();
        assertThat(processedActions, iterableWithSize(2));
        assertThat(
                processedActions.get(0).getStatus(), is(ProcessedActionStatusProto.ACTION_APPLIED));
        ProcessedActionProto processedUseCard = processedActions.get(1);
        assertThat(
                processedUseCard.getStatus(), is(ProcessedActionStatusProto.AUTOFILL_INCOMPLETE));
        assertThat(processedUseCard.hasStatusDetails(), is(true));
        assertThat(processedUseCard.getStatusDetails().hasAutofillErrorInfo(), is(true));
        assertThat(processedUseCard.getStatusDetails()
                           .getAutofillErrorInfo()
                           .getAutofillFieldErrorList(),
                iterableWithSize(1));
        assertThat(processedUseCard.getStatusDetails()
                           .getAutofillErrorInfo()
                           .getAutofillFieldError(0)
                           .getNoFallbackValue(),
                is(true));
    }

    /**
     * Showcasts an element of the webpage and checks that it can be interacted with.
     */
    @Test
    @MediumTest
    public void testTermsAndConditionsWithShowCast() throws Exception {
        String profileId = mHelper.addDummyProfile("John Doe", "johndoe@gmail.com");
        mHelper.addDummyCreditCard(profileId);

        ArrayList<ActionProto> list = new ArrayList<>();
        list.add(
                (ActionProto) ActionProto.newBuilder()
                        .setShowCast(
                                ShowCastProto.newBuilder()
                                        .setElementToPresent(SelectorProto.newBuilder().addFilters(
                                                SelectorProto.Filter.newBuilder().setCssSelector(
                                                        "div.terms")))
                                        .setTouchableElementArea(ElementAreaProto.newBuilder().addTouchable(
                                                Rectangle.newBuilder().addElements(
                                                        SelectorProto.newBuilder().addFilters(
                                                                SelectorProto.Filter.newBuilder()
                                                                        .setCssSelector(
                                                                                "div.terms"))))))
                        .build());
        list.add((ActionProto) ActionProto.newBuilder()
                         .setCollectUserData(
                                 CollectUserDataProto.newBuilder()
                                         .setRequestPaymentMethod(true)
                                         .setBillingAddressName("billing_address")
                                         .addSupportedBasicCardNetworks("visa")
                                         .setPrivacyNoticeText("3rd party privacy text")
                                         .setShowTermsAsCheckbox(true)
                                         .setRequestTermsAndConditions(true)
                                         .setAcceptTermsAndConditionsText("accept terms")
                                         .setTermsAndConditionsState(
                                                 TermsAndConditionsState.ACCEPTED)
                                         .setConfirmChip(
                                                 ChipProto.newBuilder()
                                                         .setText("Custom text")
                                                         .setType(ChipType.HIGHLIGHTED_ACTION)
                                                         .setIcon(ChipIcon.ICON_REFRESH)))
                         .build());
        Choice toggle_chip =
                Choice.newBuilder()
                        .setChip(ChipProto.newBuilder().setText("Toggle"))
                        .setShowOnlyWhen(ElementConditionProto.newBuilder().setMatch(
                                SelectorProto.newBuilder()
                                        .addFilters(
                                                SelectorProto.Filter.newBuilder().setCssSelector(
                                                        "div#toggle_on"))
                                        .addFilters(
                                                SelectorProto.Filter.newBuilder().setBoundingBox(
                                                        SelectorProto.BoundingBoxFilter
                                                                .getDefaultInstance()))))
                        .build();
        list.add((ActionProto) ActionProto.newBuilder()
                         .setPrompt(PromptProto.newBuilder()
                                            .setMessage("Finish")
                                            .addChoices(Choice.newBuilder())
                                            .addChoices(toggle_chip))
                         .build());

        AutofillAssistantTestScript script = new AutofillAssistantTestScript(
                (SupportedScriptProto) SupportedScriptProto.newBuilder()
                        .setPath("form_target_website.html")
                        .setPresentation(PresentationProto.newBuilder().setAutostart(true).setChip(
                                ChipProto.newBuilder().setText("Continue")))
                        .build(),
                list);

        AutofillAssistantTestService testService =
